--- a/checkpage.cabal
+++ b/checkpage.cabal
@@ -20,6 +20,7 @@ executable checkpage
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       base >=4.8 && <4.9,
+                       wreq-sb >= 0.3.0.0
   -- hs-source-dirs:      
   default-language:    Haskell2010
