--- a/checkpage.cabal
+++ b/checkpage.cabal
@@ -22,5 +22,5 @@ executable checkpage
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9,
                        wreq-sb >= 0.3.0.0
-  -- hs-source-dirs:      
+  hs-source-dirs:      src
   default-language:    Haskell2010
