--- a/checkpage.cabal
+++ b/checkpage.cabal
@@ -21,6 +21,8 @@ executable checkpage
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9,
-                       wreq-sb >= 0.3.0.0
+                       wreq-sb >= 0.4.0.0,
+                       bytestring >= 0.10,
+                       tagsoup >= 0.13
   hs-source-dirs:      src
   default-language:    Haskell2010
